--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "flat-cache": "^3.0.4",
     "fs-extra": "^10.0.0",
     "glob-to-regexp": "^0.4.1",
-    "http-status-codes": "^2.1.4"
+    "http-status-codes": "^2.1.4",
+    "mime": "^3.0.0"
   },
   "peerDependencies": {
     "serverless": ">=1.36.0"
